--- a/index.html
+++ b/index.html
@@ -1,403 +1,305 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8">
-  <title>Mappa Verona – Referenti</title>
+<meta charset="utf-8">
+<title>Mappa Verona</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #000;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
+<style>
+html, body {
+  margin: 0;
+  height: 100%;
+  background: #000;
+  font-family: system-ui, sans-serif;
+}
+#map {
+  position:absolute;
+  inset:0;
+  z-index:1;
+}
 
-    #map {
-      position: absolute;
-      inset: 0;
-      background: #050505;
-      z-index: 1;
-    }
+/* OVERLAY SCURO "VIDEOGAME" */
+#dark-overlay {
+  position:absolute;
+  inset:0;
+  background: radial-gradient(
+    circle at center,
+    rgba(0,0,0,0.35) 0%,
+    rgba(0,0,0,0.55) 60%,
+    rgba(0,0,0,0.75) 100%
+  );
+  pointer-events:none;
+  z-index:2;
+}
 
-    /* HUD laterale in alto a sinistra */
-    #hud {
-      position: fixed;
-      top: 16px;
-      left: 16px;
-      z-index: 9999;
-      padding: 14px 16px 10px;
-      background: rgba(8, 8, 8, 0.95);
-      border-left: 4px solid #00ff9c;
-      min-width: 280px;
-      max-width: 320px;
-      box-shadow: 0 0 18px rgba(0,0,0,0.7);
-      border-radius: 3px;
-      color: #f5f5f5;
-    }
+/* ===== HUD ===== */
+#hud {
+  position: fixed;
+  top: 16px;
+  left: 16px;
+  z-index: 9999;
+  width: 320px;
+  padding: 16px;
+  background: rgba(8,8,8,.95);
+  border-left: 4px solid #00ff9c;
+  box-shadow: 0 0 22px rgba(0,0,0,.8);
+}
 
-    .hud-title {
-      font-size: 19px;
-      font-weight: 650;
-      letter-spacing: 0.5px;
-      line-height: 1.2;
-    }
+.hud-title {
+  font-size:18px;
+  font-weight:650;
+  color:#fff;
+}
 
-    .hud-sub {
-      margin-top: 6px;
-      font-size: 13px;
-      color: #b5b5b5;
-      line-height: 1.35;
-    }
+.hud-sub {
+  margin-top:6px;
+  font-size:13px;
+  color:#bfbfbf;
+}
 
-    .hud-meta {
-      margin-top: 8px;
-      font-size: 11px;
-      color: #8c8c8c;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
+/* ===== CONTATORI ===== */
+#stats {
+  margin-top:12px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:8px;
+}
+.stat {
+  font-size:12px;
+  padding:8px;
+  background:rgba(255,255,255,.04);
+}
+.stat strong {
+  display:block;
+  font-size:18px;
+}
+.ok strong { color:#00ff9c; }
+.warn strong { color:#ffaa00; }
 
-    .hud-meta span {
-      background: rgba(255,255,255,0.03);
-      padding: 3px 6px;
-      border-radius: 2px;
-    }
+/* ===== BADGE ===== */
+.badge {
+  margin-top:10px;
+  padding:4px 8px;
+  font-size:11px;
+}
+.badge-ok {
+  background:rgba(0,255,156,.15);
+  color:#bfffe8;
+}
+.badge-warn {
+  background:rgba(255,170,0,.25);
+  color:#ffd699;
+}
 
-    #hud-actions {
-      margin-top: 10px;
-      display: flex;
-      gap: 6px;
-    }
+/* ===== AZIONI ===== */
+.action {
+  margin-top:8px;
+  padding:8px;
+  text-align:center;
+  font-size:13px;
+  font-weight:600;
+  cursor:pointer;
+  border-radius:4px;
+}
+.action.primary {
+  background:#00ff9c;
+  color:#000;
+}
+.action.secondary {
+  background:#1b1b1b;
+  color:#fff;
+  border:1px solid #333;
+}
 
-    #hud-actions button {
-      font-size: 11px;
-      padding: 4px 8px;
-      border-radius: 3px;
-      border: 1px solid #00ff9c;
-      background: #050b09;
-      color: #e8ffe9;
-      cursor: pointer;
-    }
+/* ===== REFERENTI ===== */
+#referentiBox {
+  margin-top:10px;
+  padding:10px;
+  background:#0f0f0f;
+  color:#fff;
+  font-size:13px;
+  display:none;
+  border-left:3px solid #00ff9c;
+}
+#referentiBox ul {
+  margin:6px 0 0;
+  padding-left:18px;
+}
 
-    #hud-actions button:hover {
-      background: #00ff9c;
-      color: #05110b;
-    }
+.label-comune {
+  color:rgba(240,240,240,.9);
+  font-size:11px;
+  text-shadow:0 0 6px #000;
+  pointer-events:none;
+}
 
-    #ref-list {
-      margin-top: 8px;
-      font-size: 12px;
-      max-height: 120px;
-      overflow-y: auto;
-      border-top: 1px solid rgba(255,255,255,0.07);
-      padding-top: 6px;
-    }
+.orfano {
+  animation: glow 2.5s infinite;
+}
+@keyframes glow {
+  0%,100% { stroke-opacity:.5 }
+  50% { stroke-opacity:1 }
+}
 
-    #ref-list ul {
-      margin: 4px 0 0;
-      padding-left: 18px;
-    }
-
-    #ref-list li {
-      margin-bottom: 2px;
-      color: #ffffff;
-    }
-
-    #ref-list-empty {
-      color: #ffcc66;
-      font-size: 11px;
-    }
-
-    .badge-orfano {
-      color: #ff6666;
-      font-weight: 600;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    /* Etichette dei comuni sulla mappa */
-    .label-comune {
-      color: rgba(235,235,235,0.9);
-      font-size: 11px;
-      white-space: nowrap;
-      text-shadow: 0 0 5px rgba(0,0,0,0.95);
-      pointer-events: none;
-    }
-
-    .leaflet-interactive {
-      cursor: pointer;
-    }
-  </style>
+.leaflet-interactive { cursor:pointer }
+</style>
 </head>
+
 <body>
 
 <div id="map"></div>
+<div id="dark-overlay"></div>
 
 <div id="hud">
   <div class="hud-title" id="hud-title">Provincia di Verona</div>
-  <div class="hud-sub" id="hud-sub">
-    Vista generale — seleziona un comune sulla mappa
+  <div class="hud-sub" id="hud-sub">Vista generale</div>
+
+  <div id="stats">
+    <div class="stat ok"><strong id="coperti">0</strong>comuni coperti</div>
+    <div class="stat warn"><strong id="orfani">0</strong>comuni orfani</div>
   </div>
 
-  <div class="hud-meta">
-    <span id="hud-counter">Comuni caricati: 0</span>
-    <span id="hud-orfani">Comuni orfani: 0</span>
+  <div id="badge" class="badge badge-warn">Seleziona un comune</div>
+
+  <div id="addBtn" class="action primary" style="display:none">
+    ➕ Aggiungiti come referente
   </div>
 
-  <div id="hud-actions" class="hidden">
-    <button id="btn-add-ref">Aggiungi referente</button>
-    <button id="btn-toggle-refs">Vedi referenti</button>
+  <div id="toggleBtn" class="action secondary" style="display:none">
+    👤 Vedi referenti
   </div>
 
-  <div id="ref-list" class="hidden"></div>
+  <div id="referentiBox"></div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // Mappa base con tile scuri (per avere sfondo leggibile)
-  const map = L.map('map', {
-    zoomControl: true,
-    attributionControl: false
-  }).setView([45.43, 10.99], 10); // zoom leggermente più vicino
+/* ===== REFERENTI DI ESEMPIO ===== */
+const referenti = {
+  "Verona": ["Vincenzo R.", "Anna R.", "Luca M."]
+};
 
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 18,
-  }).addTo(map);
+let comuneAttivo=null, mostraLista=false;
 
-  // HUD elementi
-  const hudTitle   = document.getElementById('hud-title');
-  const hudSub     = document.getElementById('hud-sub');
-  const hudCounter = document.getElementById('hud-counter');
-  const hudOrfani  = document.getElementById('hud-orfani');
-  const hudActions = document.getElementById('hud-actions');
-  const refListBox = document.getElementById('ref-list');
-  const btnAddRef  = document.getElementById('btn-add-ref');
-  const btnToggle  = document.getElementById('btn-toggle-refs');
+/* ===== MAPPA ===== */
+const map=L.map('map',{attributionControl:false})
+  .setView([45.43,10.99],11);
 
-  // Stato in memoria
-  let comuniLayer = null;
-  let selectedLayer = null;
-  let selectedComuneName = null;
-  let labels = [];
-  const referentiByComune = {}; // { nomeComune : [ 'Vincenzo', ... ] }
-  let refsVisible = false;
+L.tileLayer(
+ 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+ {maxZoom:19}
+).addTo(map);
 
-  // Aggiorna contatori orfani / totali
-  function updateCounters() {
-    if (!comuniLayer) return;
-    const layers = comuniLayer.getLayers();
-    const tot = layers.length;
-    let orfani = 0;
-    layers.forEach(l => {
-      const nome = l.feature.properties._nomeComune;
-      const refs = referentiByComune[nome] || [];
-      if (!refs.length) orfani++;
-    });
-    hudCounter.textContent = 'Comuni caricati: ' + tot;
-    hudOrfani.innerHTML = 'Comuni orfani: <span class="badge-orfano">' + orfani + '</span>';
-  }
+let labels=[], comuni=[], selected=null;
 
-  // Aggiorna pannello referenti per il comune selezionato
-  function refreshRefList() {
-    if (!selectedComuneName) return;
-    const refs = referentiByComune[selectedComuneName] || [];
+const nomeComune = p =>
+  p.nome||p.DENOM_COM||p.name||p.COMUNE||'Comune';
 
-    if (!refs.length) {
-      refListBox.innerHTML = '<div id="ref-list-empty">Nessun referente — comune orfano.</div>';
-    } else {
-      refListBox.innerHTML = '<div style="font-size:11px;margin-bottom:3px;">Referenti per ' +
-        selectedComuneName +
-        ':</div><ul>' +
-        refs.map(r => '<li>' + r + '</li>').join('') +
-        '</ul>';
-    }
-  }
+const hasRef = c => referenti[c] && referenti[c].length>0;
 
-  // Selezione di un comune
-  function selectComune(layer) {
-    const nome = layer.feature.properties._nomeComune || 'Comune';
+function renderRefs(){
+  const box=document.getElementById('referentiBox');
+  box.innerHTML='<strong>Referenti</strong>';
+  const ul=document.createElement('ul');
+  (referenti[comuneAttivo]||[]).forEach(r=>{
+    const li=document.createElement('li');
+    li.textContent=r;
+    ul.appendChild(li);
+  });
+  box.appendChild(ul);
+}
 
-    // reset stile precedente
-    if (selectedLayer && selectedLayer !== layer) {
-      selectedLayer.setStyle({
-        color: '#00ff9c',
-        weight: 1,
-        fillOpacity: 0
+fetch('data/comuni_verona.json')
+.then(r=>r.json())
+.then(data=>{
+  const layer=L.geoJSON(data,{
+    style:f=>{
+      const n=nomeComune(f.properties);
+      comuni.push(n);
+      return {
+        color:hasRef(n)?'#00ff9c':'#ffaa00',
+        weight:1,
+        fillOpacity:0
+      };
+    },
+    onEachFeature:(f,l)=>{
+      const nome=nomeComune(f.properties);
+
+      const c=l.getBounds().getCenter();
+      const lab=L.marker(c,{
+        icon:L.divIcon({
+          className:'label-comune',
+          html:nome,
+          iconSize:[120,14]
+        }), interactive:false
+      }).addTo(map);
+      labels.push(lab);
+
+      if(!hasRef(nome))
+        setTimeout(()=>l._path.classList.add('orfano'),50);
+
+      l.on('click',()=>{
+        if(selected){
+          const pn=nomeComune(selected.feature.properties);
+          selected.setStyle({
+            color:hasRef(pn)?'#00ff9c':'#ffaa00',
+            weight:1
+          });
+        }
+        selected=l;
+        comuneAttivo=nome;
+
+        l.setStyle({color:'#fff',weight:3});
+        map.fitBounds(l.getBounds(),{padding:[40,40]});
+
+        document.getElementById('hud-title').innerText='Comune di '+nome;
+        document.getElementById('badge').className=
+          'badge '+(hasRef(nome)?'badge-ok':'badge-warn');
+        document.getElementById('badge').innerText=
+          hasRef(nome)?'Comune coperto':'⚠ Comune orfano';
+
+        document.getElementById('addBtn').style.display='block';
+        document.getElementById('toggleBtn').style.display=
+          hasRef(nome)?'block':'none';
+
+        mostraLista=false;
+        document.getElementById('referentiBox').style.display='none';
+        document.getElementById('toggleBtn').innerText='👤 Vedi referenti';
       });
     }
+  }).addTo(map);
 
-    selectedLayer = layer;
-    selectedComuneName = nome;
+  map.fitBounds(layer.getBounds());
 
-    // stile selezionato
-    layer.setStyle({
-      color: '#ffffff',
-      weight: 2.5,
-      fillOpacity: 0.12
-    });
+  document.getElementById('coperti').innerText=
+    comuni.filter(c=>hasRef(c)).length;
+  document.getElementById('orfani').innerText=
+    comuni.length - comuni.filter(c=>hasRef(c)).length;
 
-    // zoom al comune
-    map.fitBounds(layer.getBounds(), { padding: [40, 40] });
-
-    // aggiorna HUD
-    const refs = referentiByComune[nome] || [];
-    hudTitle.textContent = 'Comune di ' + nome;
-    hudSub.innerHTML =
-      'Referenti territoriali: ' +
-      (refs.length ? refs.join(', ') : '<span class="badge-orfano">— nessuno (comune orfano)</span>');
-
-    // mostra bottoni
-    hudActions.classList.remove('hidden');
-
-    // se la lista è visibile, refresh
-    if (refsVisible) {
-      refListBox.classList.remove('hidden');
-      refreshRefList();
-    } else {
-      refListBox.classList.add('hidden');
-    }
-  }
-
-  // Bottone: aggiungi referente
-  btnAddRef.addEventListener('click', () => {
-    if (!selectedComuneName) {
-      alert('Seleziona prima un comune sulla mappa.');
-      return;
-    }
-    const nome = prompt('Inserisci il tuo nome come referente per ' + selectedComuneName + ':');
-    if (!nome) return;
-    const trimmed = nome.trim();
-    if (!trimmed) return;
-
-    if (!referentiByComune[selectedComuneName]) {
-      referentiByComune[selectedComuneName] = [];
-    }
-    referentiByComune[selectedComuneName].push(trimmed);
-
-    // aggiorna HUD e contatori
-    const refs = referentiByComune[selectedComuneName];
-    hudSub.innerHTML = 'Referenti territoriali: ' + refs.join(', ');
-    updateCounters();
-
-    // se lista aperta, aggiornala
-    if (refsVisible) {
-      refreshRefList();
-    }
+  map.on('zoomend',()=>{
+    labels.forEach(l=>map.getZoom()<=11?l.addTo(map):map.removeLayer(l));
   });
+});
 
-  // Bottone: vedi / nascondi referenti
-  btnToggle.addEventListener('click', () => {
-    if (!selectedComuneName) {
-      alert('Seleziona prima un comune sulla mappa.');
-      return;
-    }
-    refsVisible = !refsVisible;
-    if (refsVisible) {
-      btnToggle.textContent = 'Nascondi referenti';
-      refListBox.classList.remove('hidden');
-      refreshRefList();
-    } else {
-      btnToggle.textContent = 'Vedi referenti';
-      refListBox.classList.add('hidden');
-    }
-  });
+/* ===== BOTTONI ===== */
+document.getElementById('addBtn').onclick=()=>{
+  const nome=prompt('Inserisci il tuo nome');
+  if(!nome) return;
+  if(!referenti[comuneAttivo]) referenti[comuneAttivo]=[];
+  referenti[comuneAttivo].push(nome);
+  renderRefs();
+};
 
-  // Carica i comuni
-  fetch('data/comuni_verona.json')
-    .then(r => r.json())
-    .then(data => {
-
-      // Primo layer: "ombra" per dare profondità
-      L.geoJSON(data, {
-        style: {
-          color: '#000',
-          weight: 3,
-          opacity: 0.35
-        }
-      }).addTo(map);
-
-      // Layer principale comuni
-      comuniLayer = L.geoJSON(data, {
-        style: {
-          color: '#00ff9c',
-          weight: 1,
-          opacity: 0.9,
-          fillOpacity: 0
-        },
-        onEachFeature: (feature, layer) => {
-          // Nome del comune: prova vari campi
-          const nome =
-            feature.properties.nome ||
-            feature.properties.name ||
-            feature.properties.DENOM_COM ||
-            feature.properties.COMUNE ||
-            feature.properties.DEN_UTS ||
-            'Comune';
-
-          // memorizzo un nome "standardizzato" dentro alle properties per riuso
-          feature.properties._nomeComune = nome;
-
-          // Etichetta testuale al centro (zoom out)
-          const center = layer.getBounds().getCenter();
-          const label = L.marker(center, {
-            interactive: false,
-            icon: L.divIcon({
-              className: 'label-comune',
-              html: nome,
-              iconSize: [140, 16]
-            })
-          });
-          labels.push(label);
-          label.addTo(map);
-
-          // hover
-          layer.on('mouseover', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color: '#ffffff', weight: 2 });
-            }
-          });
-
-          layer.on('mouseout', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color: '#00ff9c', weight: 1 });
-            }
-          });
-
-          // click
-          layer.on('click', () => {
-            selectComune(layer);
-          });
-        }
-      }).addTo(map);
-
-      // adatta la vista a tutti i comuni
-      map.fitBounds(comuniLayer.getBounds());
-      updateCounters();
-
-      // gestione delle etichette in base allo zoom
-      function updateLabels() {
-        const z = map.getZoom();
-        labels.forEach(l => {
-          if (z >= 9.5) {
-            l.addTo(map);
-          } else {
-            map.removeLayer(l);
-          }
-        });
-      }
-
-      map.on('zoomend', updateLabels);
-      updateLabels();
-    })
-    .catch(err => {
-      console.error('Errore nel caricamento dei comuni:', err);
-      hudSub.textContent = 'Errore nel caricamento dei confini.';
-    });
+document.getElementById('toggleBtn').onclick=()=>{
+  mostraLista=!mostraLista;
+  document.getElementById('toggleBtn').innerText=
+    mostraLista?'Nascondi referenti':'👤 Vedi referenti';
+  document.getElementById('referentiBox').style.display=
+    mostraLista?'block':'none';
+  if(mostraLista) renderRefs();
+};
 </script>
 
 </body>
