--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="utf-8">
-<title>Mappa Verona</title>
+<title>Mappa Verona – Farmacie e Medici</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
@@ -13,22 +13,15 @@ html, body {
   background: #000;
   font-family: system-ui, sans-serif;
 }
-#map {
-  position:absolute;
-  inset:0;
-  z-index:1;
-}
+#map { position:absolute; inset:0; z-index:1; }
 
-/* OVERLAY SCURO (più leggero) */
+/* overlay */
 #dark-overlay {
-  position:absolute;
-  inset:0;
-  background: radial-gradient(
-    circle at center,
-    rgba(0,0,0,0.15) 0%,
-    rgba(0,0,0,0.35) 55%,
-    rgba(0,0,0,0.55) 100%
-  );
+  position:absolute; inset:0;
+  background: radial-gradient(circle,
+    rgba(0,0,0,.15) 0%,
+    rgba(0,0,0,.4) 55%,
+    rgba(0,0,0,.6) 100%);
   pointer-events:none;
   z-index:2;
 }
@@ -36,11 +29,11 @@ html, body {
 /* HUD */
 #hud {
   position: fixed;
-  top: 16px;
-  left: 16px;
+  top: 14px;
+  left: 14px;
   z-index: 9999;
-  width: 330px;
-  padding: 16px;
+  width: 360px;
+  padding: 14px;
   background: rgba(8,8,8,.95);
   border-left: 4px solid #00ff9c;
   box-shadow: 0 0 22px rgba(0,0,0,.8);
@@ -48,85 +41,73 @@ html, body {
 }
 
 .hud-title { font-size:18px; font-weight:650; }
-.hud-sub { margin-top:6px; font-size:13px; color:#bfbfbf; }
+.hud-sub { font-size:13px; color:#bfbfbf; margin-top:6px; }
 
-#stats {
+.section {
   margin-top:12px;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:8px;
 }
-.stat {
+.section h4 {
+  margin:0 0 6px;
   font-size:12px;
-  padding:8px;
-  background:rgba(255,255,255,.05);
+  color:#9ef5d9;
+  letter-spacing:.8px;
+  text-transform:uppercase;
 }
-.stat strong { display:block; font-size:18px; }
-.ok strong { color:#00ff9c; }
-.warn strong { color:#ffaa00; }
 
-/* BADGE */
-.badge {
-  margin-top:10px;
-  padding:4px 8px;
-  font-size:11px;
+/* elenco */
+.list {
+  max-height:180px;
+  overflow-y:auto;
+  background:#0f0f0f;
+  padding:6px;
 }
-.badge-ok { background:rgba(0,255,156,.15); color:#bfffe8; }
-.badge-warn { background:rgba(255,170,0,.25); color:#ffd699; }
-
-/* AZIONI */
-.action {
-  margin-top:8px;
-  padding:8px;
-  text-align:center;
-  font-size:13px;
-  font-weight:600;
-  border-radius:4px;
+.item {
+  padding:6px;
+  border-bottom:1px solid rgba(255,255,255,.05);
   cursor:pointer;
 }
-.primary { background:#00ff9c; color:#000; }
-.secondary {
-  background:#1b1b1b;
-  color:#fff;
-  border:1px solid #333;
-}
+.item:hover { background:#1a1a1a; }
 
-/* REFERENTI */
-#referentiBox {
-  margin-top:10px;
-  padding:10px;
-  background:#0f0f0f;
-  display:none;
-  border-left:3px solid #00ff9c;
+.badge {
+  display:inline-block;
+  font-size:10px;
+  padding:2px 6px;
+  margin-left:6px;
 }
-#referentiBox ul {
-  margin:6px 0 0;
-  padding-left:18px;
-}
+.accetta { background:#00ff9c; color:#000; }
+.in_trattativa { background:#4da6ff; }
+.da_contattare { background:#ffaa00; color:#000; }
+.rifiuta { background:#ff4d4d; }
 
-/* MARKER FARMACIE */
-.farmacia-marker {
-  width:14px;
-  height:14px;
+.marker-dot {
+  width:12px; height:12px;
   border-radius:50%;
-  border:2px solid #000;
+  display:inline-block;
 }
-.farmacia-da_contattare { background:#ffaa00; }
-.farmacia-in_trattativa { background:#4da6ff; }
-.farmacia-accetta { background:#00ff9c; }
-.farmacia-rifiuta { background:#ff4d4d; }
+.marker-triangle {
+  width:0; height:0;
+  border-left:7px solid transparent;
+  border-right:7px solid transparent;
+  border-bottom:12px solid;
+  display:inline-block;
+}
+.private { border-color:transparent; }
+.comunale { }
+
+/* marker styles */
+.farmacia-accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
+.farmacia-in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff;}
+.farmacia-da_contattare { background:#ffaa00; border-bottom-color:#ffaa00;}
+.farmacia-rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d;}
 
 .label-comune {
-  color:rgba(240,240,240,.9);
+  color:#fff;
   font-size:11px;
   text-shadow:0 0 6px #000;
   pointer-events:none;
 }
-
-.leaflet-interactive { cursor:pointer }
 </style>
 </head>
-
 <body>
 
 <div id="map"></div>
@@ -134,147 +115,112 @@ html, body {
 
 <div id="hud">
   <div class="hud-title" id="hud-title">Provincia di Verona</div>
-  <div class="hud-sub" id="hud-sub">Seleziona un comune</div>
+  <div class="hud-sub">Seleziona un comune</div>
 
-  <div id="stats">
-    <div class="stat ok">
-      <strong id="coperti">0</strong>comuni coperti
-    </div>
-    <div class="stat warn">
-      <strong id="orfani">0</strong>comuni orfani
-    </div>
-    <div class="stat">
-      <strong id="farmacieCount">0</strong>farmacie visibili
-    </div>
-    <div class="stat">
-      <strong>–</strong>medici/studi
-    </div>
+  <div class="section">
+    <h4>Farmacie del comune</h4>
+    <div id="farmacieList" class="list">—</div>
   </div>
 
-  <div id="badge" class="badge badge-warn">—</div>
-
-  <div id="addBtn" class="action primary" style="display:none">
-    ➕ Aggiungiti come referente
+  <div class="section">
+    <h4>Medici di base / Studi</h4>
+    <div id="mediciList" class="list">—</div>
   </div>
-
-  <div id="toggleBtn" class="action secondary" style="display:none">
-    👤 Vedi referenti
-  </div>
-
-  <div id="referentiBox"></div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* ===== DATI ===== */
-const referenti = {
-  "Verona": ["Vincenzo R.", "Anna R.", "Luca M."]
-};
-
+/* ===== MOCK DATABASE ===== */
 const farmacie = [
-  { nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, stato:"accetta" },
-  { nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, stato:"in_trattativa" },
-  { nome:"Farmacia Borgo Roma", comune:"Verona", lat:45.389, lng:10.982, stato:"da_contattare" }
+  { nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta", note:"Banco dedicato" },
+  { nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa" },
+  { nome:"Farmacia Borgo Roma", comune:"Verona", lat:45.389, lng:10.982, tipo:"privata", stato:"da_contattare" }
 ];
 
-let comuneAttivo=null;
-let farmacieLayer=L.layerGroup();
+const medici = [
+  { nome:"Dr. Rossi", comune:"Verona", lat:45.441, lng:10.995 },
+  { nome:"Studio Associato Borgo Trento", comune:"Verona", lat:45.447, lng:10.988 }
+];
 
-/* ===== MAPPA ===== */
+let farmaciLayers = L.layerGroup();
+let mediciLayers = L.layerGroup();
+
 const map=L.map('map',{attributionControl:false})
   .setView([45.43,10.99],11);
 
-L.tileLayer(
- 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
- {maxZoom:19}
-).addTo(map);
+L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+  {maxZoom:19}).addTo(map);
 
-farmacieLayer.addTo(map);
+farmaciLayers.addTo(map);
+mediciLayers.addTo(map);
 
-/* ===== UTILS ===== */
-const nomeComune=p=>p.nome||p.DENOM_COM||p.name||p.COMUNE||'Comune';
-const hasRef=c=>referenti[c]&&referenti[c].length>0;
-
-/* ===== FARMACIE ===== */
 function mostraFarmacie(comune){
-  farmacieLayer.clearLayers();
-  const visibili=farmacie.filter(f=>f.comune===comune);
-  visibili.forEach(f=>{
-    const marker=L.marker([f.lat,f.lng],{
-      icon:L.divIcon({
-        className:`farmacia-marker farmacia-${f.stato}`,
-        iconSize:[14,14]
-      })
-    }).bindPopup(`<strong>${f.nome}</strong><br/>Stato: ${f.stato}`);
-    farmacieLayer.addLayer(marker);
+  farmaciLayers.clearLayers();
+  document.getElementById('farmacieList').innerHTML='';
+  farmacie.filter(f=>f.comune===comune).forEach(f=>{
+    const iconHTML = f.tipo==='privata'
+      ? `<span class="marker-dot farmacia-${f.stato}"></span>`
+      : `<span class="marker-triangle farmacia-${f.stato}"></span>`;
+
+    const m=L.marker([f.lat,f.lng],{
+      icon:L.divIcon({html:iconHTML,iconSize:[14,14],className:''})
+    }).bindPopup(`<strong>${f.nome}</strong><br/>${f.tipo}<br/>${f.stato}`);
+    farmaciLayers.addLayer(m);
+
+    const row=document.createElement('div');
+    row.className='item';
+    row.innerHTML=`${iconHTML} ${f.nome}
+      <span class="badge ${f.stato}">${f.stato}</span>`;
+    row.onclick=()=>{
+      map.setView([f.lat,f.lng],16);
+      m.openPopup();
+    };
+    document.getElementById('farmacieList').appendChild(row);
   });
-  document.getElementById('farmacieCount').innerText=visibili.length;
 }
 
-/* ===== COMUNI ===== */
-let labels=[], comuni=[], selected=null;
+function mostraMedici(comune){
+  mediciLayers.clearLayers();
+  document.getElementById('mediciList').innerHTML='';
+  medici.filter(m=>m.comune===comune).forEach(m=>{
+    const marker=L.marker([m.lat,m.lng],{
+      icon:L.divIcon({html:"⚕️",iconSize:[20,20],className:""})
+    }).bindPopup(`<strong>${m.nome}</strong>`);
+    mediciLayers.addLayer(marker);
 
+    const row=document.createElement('div');
+    row.className='item';
+    row.textContent='⚕️ '+m.nome;
+    row.onclick=()=>{
+      map.setView([m.lat,m.lng],16);
+      marker.openPopup();
+    };
+    document.getElementById('mediciList').appendChild(row);
+  });
+}
+
+/* ==== COMUNI ==== */
 fetch('data/comuni_verona.json')
 .then(r=>r.json())
 .then(data=>{
-  const layer=L.geoJSON(data,{
-    style:f=>{
-      const n=nomeComune(f.properties);
-      comuni.push(n);
-      return {
-        color:hasRef(n)?'#00ff9c':'#ffaa00',
-        weight:1,
-        fillOpacity:0
-      };
-    },
+  L.geoJSON(data,{
+    style:{color:'#00ff9c',weight:1,fillOpacity:0},
     onEachFeature:(f,l)=>{
-      const nome=nomeComune(f.properties);
+      const nome=f.properties.nome||f.properties.DENOM_COM||'Comune';
       const c=l.getBounds().getCenter();
-      const lab=L.marker(c,{
-        icon:L.divIcon({className:'label-comune',html:nome,iconSize:[120,14]}),
+      L.marker(c,{
+        icon:L.divIcon({className:'label-comune',html:nome}),
         interactive:false
       }).addTo(map);
-      labels.push(lab);
 
       l.on('click',()=>{
-        if(selected){
-          const pn=nomeComune(selected.feature.properties);
-          selected.setStyle({
-            color:hasRef(pn)?'#00ff9c':'#ffaa00',
-            weight:1
-          });
-        }
-        selected=l;
-        comuneAttivo=nome;
-        l.setStyle({color:'#fff',weight:3});
-
         map.fitBounds(l.getBounds(),{padding:[40,40]});
-
         document.getElementById('hud-title').innerText='Comune di '+nome;
-        document.getElementById('badge').className=
-          'badge '+(hasRef(nome)?'badge-ok':'badge-warn');
-        document.getElementById('badge').innerText=
-          hasRef(nome)?'Comune coperto':'⚠ Comune orfano';
-
-        document.getElementById('addBtn').style.display='block';
-        document.getElementById('toggleBtn').style.display=
-          hasRef(nome)?'block':'none';
-
         mostraFarmacie(nome);
+        mostraMedici(nome);
       });
     }
   }).addTo(map);
-
-  map.fitBounds(layer.getBounds());
-
-  document.getElementById('coperti').innerText=
-    comuni.filter(c=>hasRef(c)).length;
-  document.getElementById('orfani').innerText=
-    comuni.length-comuni.filter(c=>hasRef(c)).length;
-
-  map.on('zoomend',()=>{
-    labels.forEach(l=>map.getZoom()<=11?l.addTo(map):map.removeLayer(l));
-  });
 });
 </script>
 
